Fixed compilation of version 1.3.21. the reason is that, 1. ForgeGradle depends on javaxdelta, which depends on trove:trove:1.0.2(trove) 2. kotlin-gradle-plugin depends on kotlin-compiler-embeddable, which depends on org.jetbrains.intellij.deps:trove4j:1.0.20181211(trove4j). In the package trove4j, interface TObjectHashingStrategy has two static field, IDENTITY and CANONICAL, but in trove, they didn't exist. In version 1.3.11, the package trove4j was shaded into kotlin-compiler-embeddable with another name, so they don't have any conflict. But in version 1.3.21, it was marked as a separate dependency, then the two library was conflicted. When compiling kotlin, kotlin-compiler-embeddable mistakenly used trove, and it did not found CANONICAL, and caused crash of compiler. Fixing it is also simple, just exclude trove in ForgeGradle. Sorry for my poor English :)

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
         maven { url 'https://files.minecraftforge.net/maven' }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath(group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true) {
+            exclude group: 'trove', module: 'trove'
+        }
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
@@ -83,14 +85,14 @@ jar {
         attributes([
                 'FMLModType': 'LANGPROVIDER'
         ])
-        
+
         attributes([
-                'Specification-Title': 'Mod Language Provider',
-                'Specification-Vendor': 'Forge Development LLC',
-                'Specification-Version': '1',
-                'Implementation-Title': archivesBaseName,
-                'Implementation-Version': version,
-                'Implementation-Vendor': 'kottle',
+                'Specification-Title'     : 'Mod Language Provider',
+                'Specification-Vendor'    : 'Forge Development LLC',
+                'Specification-Version'   : '1',
+                'Implementation-Title'    : archivesBaseName,
+                'Implementation-Version'  : version,
+                'Implementation-Vendor'   : 'kottle',
                 'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ], 'net/alexwells/kottle/')
     }
