--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,10 @@ minecraft {
             workingDirectory project.file('run')
 
             // recommended logging data for a userdev environment
-            properties 'forge.logging.markers': 'CORE,SCAN,REGISTRIES,REGISTRYDUMP'
+            properties 'forge.logging.markers': 'CORE,SCAN,REGISTRIES'
 
             // recommended logging level for the console
-            properties 'forge.logging.console.level': 'debug'
+            properties 'forge.logging.console.level': 'info'
 
             // enable console colors
             properties 'forge.logging.noansi': 'false'
@@ -63,7 +63,7 @@ minecraft {
             workingDirectory project.file('run')
 
             // recommended logging data for a userdev environment
-            properties 'forge.logging.markers': 'CORE,SCAN,REGISTRIES,REGISTRYDUMP'
+            properties 'forge.logging.markers': 'CORE,SCAN,REGISTRIES'
 
             // recommended logging level for the console
             properties 'forge.logging.console.level': 'debug'
