Added kotlin-stdlib-jdk8 to the shadowed jars Also version bump

--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,7 @@ shadowJar {
 
     dependencies {
         include(dependency("org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"))
+        include(dependency("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"))
         include(dependency("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"))
         include(dependency("org.jetbrains:annotations:$annotationsVersion"))
         include(dependency("org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutinesVersion}"))
