Integration test now actually tests full build

--- a/integrationTest/build.gradle
+++ b/integrationTest/build.gradle
@@ -90,4 +90,5 @@ task eulaTxt()  {
 project.afterEvaluate {
     project.tasks["prepareRuns"].dependsOn(project.tasks["installKottle"])
     project.tasks["prepareRuns"].dependsOn(project.tasks["eulaTxt"])
+    project.tasks["prepareRuns"].dependsOn(rootProject.tasks["build"])
 }
