--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-version = 1.5.2
+version = 2.0.0
 
 mappingsChannel = snapshot
 mappingsVersion = 20200216-1.15.1
 forgeVersion = net.minecraftforge:forge:1.15.2-31.1.12
 
-kotlinVersion = 1.3.61
-annotationsVersion = 18.0.0
-coroutinesVersion = 1.3.2
+kotlinVersion = 1.4-M1
+annotationsVersion = 19.0.0
+coroutinesVersion = 1.3.5
