--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,6 @@ mappingsChannel = snapshot
 mappingsVersion = 20200216-1.15.1
 forgeVersion = net.minecraftforge:forge:1.15.2-31.1.12
 
-kotlinVersion = 1.4-M1
+kotlinVersion = 1.4.0
 annotationsVersion = 19.0.0
-coroutinesVersion = 1.3.5
+coroutinesVersion = 1.3.9
