--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 
 plugins {
     id 'com.github.johnrengelman.shadow' version '4.0.4'
+    id 'org.jmailen.kotlinter' version '3.0.2'
 }
 
 apply plugin: 'net.minecraftforge.gradle'
